Update 1.1.1:
- Bugfixes
- Yeah that's pretty much it lol