@@ -1,31 +1,0 @@
-metadata.json
-update/changelog.txt
-compiler/convertAction.js
-compiler/loadAction.js
-imports/default.htsl
-imports/testing.htsl
-gui/codeWindow.js
-index.js
-gui/Navigator.js
-actions/loaders/conditional.js
-gui/loadActionGUI.js
-gui/Queue.js
-actions/loaders/give_experience_levels.js
-actions/loaders/conditional.js
-utils/actionLimits.js
-actions/loaders/set_hunger_level.js
-actions/loaders/go_to_house_spawn.js
-update/update.js
-actions/loaders/teleport_player.js
-actions/loaders/give_item.js
-actions/loaders/play_sound.js
-utils/convertSound.js
-actions/loaders/display_menu.js
-actions/loaders/_import_all.js
-actions/loaders/_import_limited.js
-actions/loaders/close_menu.js
-actions/loaders/pause_execution.js
-actions/loaders/set_player_team.js
-actions/loaders/change_team_stat.js
-actions/loaders/balance_player_team.js
-utils/config.js
