@@ -1,3 +1,5 @@
-Update 1.1.1:
+Update 1.1.2:
 - Bugfixes
-- Yeah that's pretty much it lol
+- Minor QoL changes
+- goto now supports regions "goto region "region name" "Entry Actions"/"Exit Actions"
+- /htsl config
